--- a/package.json
+++ b/package.json
@@ -21,10 +21,6 @@
     "@babel/runtime": "^7.19.0",
     "babel-loader": "^8.2.5",
     "css-loader": "^6.7.1",
-    "eslint": "^8.23.1",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-jest": "^27.0.4",
     "path": "^0.12.7",
     "style-loader": "^3.3.1",
     "webpack": "^5.74.0",
@@ -32,7 +28,12 @@
     "webpack-dev-server": "^4.11.0"
   },
   "dependencies": {
+    "axios": "^0.27.2",
+    "json-loader": "^0.5.7",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.4.0",
+    "react-router-dom": "6"
   }
 }
